// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Options stringifyPublicPath {Boolean} False 1`] = `
Object {
  "assets": Array [
    "9c87cbf3ba33126ffd25ae7f2f6bbafb.png",
  ],
  "source": "module.exports = (window.CDN_PATH ? window.CDN_PATH + \\"9c87cbf3ba33126ffd25ae7f2f6bbafb.png\\" : \\"9c87cbf3ba33126ffd25ae7f2f6bbafb.png\\");",
}
`;

exports[`Options stringifyPublicPath {Boolean} True (Default) 1`] = `
Object {
  "assets": Array [
    "9c87cbf3ba33126ffd25ae7f2f6bbafb.png",
  ],
  "source": "module.exports = \\"some/path/9c87cbf3ba33126ffd25ae7f2f6bbafb.png\\";",
}
`;
